--- a/Projets/Trello clone/style.css
+++ b/Projets/Trello clone/style.css
@@ -99,7 +99,7 @@ form {
     font-size: 16px;
     padding: 5px;
 }
-.valiodation-msg {
+.validation-msg {
     display: block;
     color: crimson;
     font-size: 16px;
